test/org/midica/testfiles/failing/eff-flow-eff-not-set-2.midica
INCLUDE inc/instruments.midica


0: wait().double.vol.set(50)

